// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>>UnorderedList --- Snapshot +++capturing Snapshot of UnorderedList 1`] = `
<ul
  className=""
>
  <li
    className=""
  >
    item1
  </li>
  <li
    className=""
  >
    item2
  </li>
</ul>
`;

exports[`>>>UnorderedList --- Snapshot +++capturing Snapshot of dotted UnorderedList 1`] = `
<ul
  className=""
>
  <li
    className=""
  >
    item1
  </li>
  <li
    className=""
  >
    item2
  </li>
</ul>
`;

exports[`>>>UnorderedList --- Snapshot +++capturing Snapshot of horizontal UnorderedList 1`] = `
<ul
  className="undefined"
>
  <li
    className=""
  >
    item1
  </li>
  <li
    className=""
  >
    item2
  </li>
</ul>
`;
